# fillWise3.0

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  req.txt  test.docx
backend/: Dockerfile  _temp_jobs.tsx  _temp_rulesets.tsx  alembic.ini  comment_link_test.py  extract_comments.py  install_log.txt  page_count.py  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_export_filename.py  bf4d55615c21_add_name_to_rewritejob.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  audit.py  auth.py  documents.py  jobs.py  reviews.py  router.py  rules.py  ws.py
backend/app/config/: logging_config.py  settings.py
backend/app/core/: errors.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  audit.py  document.py  job.py  review.py  ruleset.py  user.py
backend/app/schemas/: audit.py  auth.py  document.py  job.py  review.py  ruleset.py
backend/app/services/assembly/: docx_builder.py
backend/app/services/audit/: logger.py
backend/app/services/ingestion/: docx_extractor.py  parser.py  pdf_extractor.py  structure_detector.py
backend/app/services/llm/: client.py  orchestrator.py  prompt_engine.py
backend/app/services/review/: diff.py
backend/app/services/risk/: analyzer.py
backend/app/services/rules/: validator.py
backend/rules/: sample_ruleset.json  sample_ruleset.yaml
backend/tests/: conftest.py
backend/tests/integration/: test_admin.py  test_audit.py  test_auth.py  test_documents.py  test_jobs.py  test_reviews.py
backend/tests/unit/: test_audit_logger.py  test_diff.py  test_prompt_engine.py  test_risk_analyzer.py  test_security.py  test_structure_detector.py  test_validator.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  OPERATOR_GUIDE.md  SECURITY_MODEL.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  (+4 more)
(+37 files in other folders)
